# metabolistic

./: .dockerignore  .gitignore  AGENTS.md  BEVYCONTEXT.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Summary.md  codex-setup.sh  flowmap_design.md  setup_project.sh
.cursor/rules/: project-context.mdc
src/: camera.rs  dev_tools.rs  genome.rs  inspector.rs  lib.rs  main.rs  molecules.rs  shared.rs
src/blocks/: fat_storage.rs  fermentation.rs  fermentation_design.md  genome.rs  mod.rs  vesicle_export.rs
src/metabolism/: mod.rs
src/player/: controller.rs  mod.rs
src/scenes/: genome_edit.rs  menu.rs  mod.rs  scene_2d.rs  scene_3d.rs
src/terrain/: mod.rs
tests/: currency_invariants.proptest-regressions  currency_invariants.rs  currency_test.rs  fermentation_test.rs  genome_test.rs  integration_test.rs  metabolic_flow_test.rs  metabolic_invariants.proptest-regressions  metabolic_invariants.rs  multi_system_interactions.proptest-regressions  multi_system_interactions.rs  precision_tests.rs  property_utils.rs  temporal_consistency.rs
