[package]
name = "metabolistic3d"
version = "0.1.0"
edition = "2021"

[lib]
name = "metabolistic3d"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Full build with graphics, audio, and all features
bevy = { version = "0.15", features = ["bevy_gizmos"], optional = true }
# Headless build with minimal features - no graphics, no audio
bevy-headless = { package = "bevy", version = "0.15", default-features = false, optional = true }

rand = "0.8"
log = { version = "*", features = ["max_level_debug", "release_max_level_error"] }
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }

avian3d = "0.2.1"
leafwing-input-manager = "0.16"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# These dependencies are only needed for full builds with UI
bevy-inspector-egui = { version = "0.30.0", optional = true }
bevy_egui = { version = "0.33.0", optional = true }
egui = { version = "0.31.1", optional = true }

[features]
default = [
  # Default to a native dev build with full features.
  "full",
]

# Full build with graphics, audio, and all UI dependencies
full = [
  "bevy", 
  "bevy-inspector-egui", 
  "bevy_egui", 
  "egui", 
  "dev_native"
]

# Headless build with minimal features - no graphics, no audio, no UI
headless = [
  "bevy-headless"
]

dev = [
  # Improve compile times for dev builds by linking Bevy as a dynamic library.
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
]
dev_native = [
  "dev",
  # Enable asset hot reloading for native dev builds.
  "bevy/file_watcher",
  # Enable embedded asset hot reloading for native dev builds.
  "bevy/embedded_watcher",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"

[dev-dependencies]
env_logger = "0.11"
